--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,10 +3,10 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 
-APP_URL=http://maenard.local:8000
-FRONTEND_URL=http://maenard.local:3000
-SESSION_DOMAIN=maenard.local
-SANCTUM_STATEFUL_DOMAINS=maenard.local:3000
+APP_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:3000
+SESSION_DOMAIN=localhost
+SANCTUM_STATEFUL_DOMAINS=localhost:3000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
